<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/verticalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_div"
        android:layout_below="@id/top_div"
        >
        <LinearLayout
            android:id="@+id/foods_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:showDividers="middle"
            android:divider="@drawable/vertical_divider">

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/top_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        >

        <Button
            android:id="@+id/delete_all_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/empty_button_shape"
            android:drawableStart="@drawable/ic_delete_24"
            android:text="@string/delete_all"
            android:textColor="#000"
            style="@style/cart_button_style"/>

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/full_button_shape"
            android:drawableEnd="@drawable/ic_send_24"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/proceed"
            android:textColor="#fff"
            style="@style/cart_button_style"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_order_24"
            android:text="@string/order"
            android:textColor="#fff"
            style="@style/nav_button_style"/>

        <Button
            android:id="@+id/cart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_selected_cart_24"
            android:text="@string/cart"
            android:textColor="@color/main_color"
            style="@style/nav_button_style"/>
    </LinearLayout>

</RelativeLayout>