<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/food_background"
    android:layout_margin="10dp"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/frit"
        android:scaleType="centerCrop"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/food_image" />
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/food_name"
            android:text="Burger Double Cheeze"
            android:textSize="18sp"
            android:maxWidth="180dp"
            android:maxLines="2"
            android:textColor="@color/food_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/qte_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_toStartOf="@+id/plus_button"
            android:text="1"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/minus_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="6dp"
            android:layout_toStartOf="@+id/qte_text"
            android:background="@drawable/button_shape"
            android:src="@drawable/ic_baseline_remove_24"
            android:contentDescription="@string/minus_button" />
        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_shape"
            android:src="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/add_button"/>    </RelativeLayout>
</LinearLayout>